add PHONY clean

--- a/NewTetris/Makefile
+++ b/NewTetris/Makefile
@@ -1,3 +1,5 @@
+.PHONY: clean
+
 tetris: tetris.o block.o
 	g++ -o tetris tetris.o block.o
 
@@ -5,3 +7,6 @@ tetris.o: tetris.cpp block.h
 	g++ -c tetris.cpp
 block.o: block.cpp block.h
 	g++ -c block.cpp
+
+clean:
+	rm *.o
